--- a/package.json
+++ b/package.json
@@ -5,12 +5,18 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "cross-env NODE_ENV=production webpack --config webpack.config.js",
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.js"
+    "rimraf":"rimraf dist",
+    "build": "cross-env NODE_ENV=production webpack --config build/webpack.config.client.js",
+    "build-client":"npm run rimraf && npm run build",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.client.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "vue": "2.5.13",
+    "vue-server-renderer": "^2.5.21"
+  },
+  "devDependencies": {
     "autoprefixer": "7.2.3",
     "babel-core": "6.26.0",
     "babel-helper-vue-jsx-merge-props": "2.0.3",
@@ -24,14 +30,15 @@
     "file-loader": "1.1.6",
     "html-webpack-plugin": "2.30.1",
     "postcss-loader": "2.0.9",
+    "rimraf": "^2.6.2",
     "style-loader": "0.19.1",
     "stylus": "0.54.5",
     "stylus-loader": "3.0.1",
     "url-loader": "0.6.2",
-    "vue": "2.5.13",
     "vue-loader": "13.6.0",
     "vue-template-compiler": "2.5.13",
     "webpack": "3.10.0",
-    "webpack-dev-server": "2.9.7"
+    "webpack-dev-server": "2.9.7",
+    "webpack-merge": "^4.1.5"
   }
 }
