vue-loader options 配置

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "rimraf":"rimraf dist",
-    "build": "cross-env NODE_ENV=production webpack --config build/webpack.config.client.js",
-    "build-client":"npm run rimraf && npm run build",
+    "rimraf": "rimraf dist",
+    "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.config.client.js",
+    "build": "npm run rimraf && npm run build:client",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.client.js"
   },
   "author": "",
@@ -36,6 +36,7 @@
     "stylus-loader": "3.0.1",
     "url-loader": "0.6.2",
     "vue-loader": "13.6.0",
+    "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "2.5.13",
     "webpack": "3.10.0",
     "webpack-dev-server": "2.9.7",
