--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.config.client.js",
     "build": "npm run rimraf && npm run build:client",
     "precommit":"npm run lint-fix",
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.client.js"
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.client.js",
+    "practice":"cross-env NODE_ENV=developmen webpack-dev-server --config build/webpack.config.practice.js"
   },
   "author": "",
   "license": "ISC",
