--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "vue": "2.5.13",
     "vue-router": "^3.0.2",
-    "vue-server-renderer": "^2.5.21"
+    "vue-server-renderer": "^2.5.21",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "7.2.3",
@@ -31,6 +32,7 @@
     "babel-plugin-syntax-jsx": "6.18.0",
     "babel-plugin-transform-vue-jsx": "3.5.0",
     "babel-preset-env": "1.6.1",
+    "babel-preset-stage-1": "^6.24.1",
     "cross-env": "5.1.3",
     "css-loader": "0.28.7",
     "eslint": "^4.16.0",
