--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "precommit": "npm run lint-fix",
     "practice": "cross-env NODE_ENV=developmen webpack-dev-server --config build/webpack.config.practice.js",
     "dev:client": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.client.js",
-    "dev:server": "cross-env NODE_ENV=development nodemon server/server.js"
+    "dev:server": "nodemon server/server.js",
+    "dev":"concurrently 'npm run dev:client' 'npm run dev:server'"
   },
   "author": "",
   "license": "ISC",
@@ -22,13 +23,13 @@
     "ejs": "^2.6.1",
     "koa": "2.4.1",
     "koa-router": "^7.4.0",
+    "koa-send": "^5.0.0",
     "vue": "2.5.13",
     "vue-router": "3.0.1",
     "vue-server-renderer": "2.5.13",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "memory-fs": "^0.4.1",
     "autoprefixer": "7.2.3",
     "babel-core": "6.26.0",
     "babel-eslint": "^8.2.1",
@@ -39,6 +40,7 @@
     "babel-plugin-transform-vue-jsx": "3.5.0",
     "babel-preset-env": "1.6.1",
     "babel-preset-stage-1": "^6.24.1",
+    "concurrently": "^4.1.0",
     "cross-env": "5.1.3",
     "css-loader": "0.28.7",
     "eslint": "^4.16.0",
@@ -53,6 +55,7 @@
     "file-loader": "1.1.6",
     "html-webpack-plugin": "2.30.1",
     "husky": "^1.2.1",
+    "memory-fs": "^0.4.1",
     "postcss-loader": "2.0.9",
     "rimraf": "^2.6.2",
     "style-loader": "0.19.1",
