--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "practice": "cross-env NODE_ENV=developmen webpack-dev-server --config build/webpack.config.practice.js",
     "dev:client": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.client.js",
     "dev:server": "nodemon server/server.js",
-    "dev":"concurrently 'npm run dev:client' 'npm run dev:server'"
+    "dev": "concurrently 'npm run dev:client' 'npm run dev:server'"
   },
   "author": "",
   "license": "ISC",
@@ -25,6 +25,7 @@
     "koa-router": "^7.4.0",
     "koa-send": "^5.0.0",
     "vue": "2.5.13",
+    "vue-meta": "^1.5.8",
     "vue-router": "3.0.1",
     "vue-server-renderer": "2.5.13",
     "vuex": "^3.0.1"
