--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "axios": "^0.18.0",
     "ejs": "^2.6.1",
     "koa": "2.4.1",
+    "koa-body": "^4.0.6",
     "koa-router": "^7.4.0",
     "koa-send": "^5.0.0",
+    "koa-session": "^5.10.1",
     "vue": "2.5.13",
     "vue-meta": "^1.5.8",
     "vue-router": "3.0.1",
